fix graph preview cutoff and positioning after dragging

--- a/app/assets/app/elements/graph/graph_view/_graph_view.scss
+++ b/app/assets/app/elements/graph/graph_view/_graph_view.scss
@@ -254,6 +254,8 @@
         width: 30%;
         min-width: 300px;
         max-width: 500px;
+        max-height: 100%;
+        overflow: hidden;
         z-index: $zindex_post_preview_frame;
         background: #FEFEFE;
 
